[gd_scene load_steps=6 format=3 uid="uid://bboox02nrg0l3"]

[ext_resource type="Script" path="res://Scripts/musket_projectile.gd" id="1_w0858"]
[ext_resource type="Texture2D" uid="uid://l40ckjsmfxl8" path="res://images/anmo sprite.png" id="2_uyuvy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e334m"]
radius = 3.0

[sub_resource type="Gradient" id="Gradient_khrrq"]
offsets = PackedFloat32Array(0.0333333, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.81, 0.81, 0.81, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_a6lxh"]
radius = 42.19

[node name="MusketProjectile" type="Area2D" groups=["Bullet"]]
script = ExtResource("1_w0858")
btype = "Mini"

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_uyuvy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_e334m")

[node name="Trail" type="Line2D" parent="."]
width = 2.0
gradient = SubResource("Gradient_khrrq")

[node name="Explosion" type="Area2D" parent="."]
scale = Vector2(2.76, 2.57198)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion"]
shape = SubResource("CircleShape2D_a6lxh")

[node name="SplitTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SplitTimer" to="." method="_on_split_timer_timeout"]
